[package]
name = "animebytes-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.6", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
async-trait = { git = "https://github.com/dtolnay/async-trait" }
thiserror = "1.0.30"

[dev-dependencies]
tokio = { version = "1.12.0", features = [ "full" ] }
