[package]
name = "animebytes-rs"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/tyhi/animebytes-rs"
description = "An api client for accessing AnimeBytes.tv tracker api"
homepage = "https://github.com/tyhi/animebytes-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"

[dev-dependencies]
tokio = { version = "1.17.0", features = [ "full" ] }
